--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hola a todos</title>
-    <body></body>
+    <title>Tesla</title>
+  </head>
+  <body>
+    <head>
+      <link rel="stylesheet" href="css/menu.css">
+      <div class="header">
+        <div class="content"><img class="logo" src="resources/logo.png" alt="" srcset="">
+          <nav>
+            <ul>
+              <li><a>Hola1</a></li>
+              <li>|</li>
+              <li><a>Hola2</a></li>
+              <li>|</li>
+              <li><a>Hola3</a></li>
+              <li>|</li>
+              <li><a>Hola4</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </head>
     <link rel="stylesheet" href="css/parrafos.css">
     <div id="parrafos">
       <div class="parrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem tellus. Donec dolor est, ornare quis urna quis, venenatis interdum risus. Etiam in augue sed sapien fringilla varius ac posuere augue. Praesent quis faucibus libero. Pellentesque fermentum diam vitae nunc porttitor, eget scelerisque metus commodo. Aliquam pretium tincidunt est id pulvinar. In urna magna, tincidunt non viverra quis, accumsan vitae leo. Donec quis eleifend tortor. Fusce tincidunt eleifend accumsan. Morbi neque nisl, sodales sed turpis posuere, consectetur aliquet quam. Nunc quis enim pellentesque, tempus ligula vitae, efficitur est. Vestibulum et sem dapibus, tincidunt dui ac, molestie est. In at ipsum ac augue fermentum hendrerit. Sed nibh quam, tempor facilisis justo vitae, auctor maximus justo. Fusce hendrerit risus a lacus viverra luctus.</div>
       <div class="parrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem tellus. Donec dolor est, ornare quis urna quis, venenatis interdum risus. Etiam in augue sed sapien fringilla varius ac posuere augue. Praesent quis faucibus libero. Pellentesque fermentum diam vitae nunc porttitor, eget scelerisque metus commodo. Aliquam pretium tincidunt est id pulvinar. In urna magna, tincidunt non viverra quis, accumsan vitae leo. Donec quis eleifend tortor. Fusce tincidunt eleifend accumsan. Morbi neque nisl, sodales sed turpis posuere, consectetur aliquet quam. Nunc quis enim pellentesque, tempus ligula vitae, efficitur est. Vestibulum et sem dapibus, tincidunt dui ac, molestie est. In at ipsum ac augue fermentum hendrerit. Sed nibh quam, tempor facilisis justo vitae, auctor maximus justo. Fusce hendrerit risus a lacus viverra luctus.</div>
     </div>
-  </head>
+  </body>
 </html>
