Slider terminado con botones y eso

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
         <div class="grid-item">
             <h1 class="title2">Carro 2</h1>
         </div>
-        <div class="grid-item"><b class="boton1">Ver más</b></div>
-        <div class="grid-item"><b class="boton2">Ver más</b></div>
+    </div>
+    <div class="botones">
+        <div><b class="boton1">Ver más</b></div>
+        <div><b class="boton2">Ver más</b></div>
     </div>
     <link rel="stylesheet" href="css/parrafos.css">
     <div id="parrafos">
