Se arreglo el slider,boton extra y eliminacion de margenes y padding del mismo

--- a/index.html
+++ b/index.html
@@ -1,75 +1,51 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Tesla</title>
     <meta charset="UTF-8">
-</head>
-
-<body>
-
+  </head>
+  <body>
     <head>
-        <link rel="stylesheet" href="css/menu.css">
-        <div class="header">
-            <div class="content"><img class="logo" src="resources/logo.png" alt="" srcset="">
-                <nav>
-                    <ul>
-                        <li><a>Hola1</a></li>
-                        <li>|</li>
-                        <li><a>Hola2</a></li>
-                        <li>|</li>
-                        <li><a>Hola3</a></li>
-                        <li>|</li>
-                        <li><a>Hola4</a></li>
-                    </ul>
-                </nav>
-            </div>
+      <link rel="stylesheet" href="css/menu.css">
+      <div class="header">
+        <div class="content"><img class="logo" src="resources/logo.png" alt="" srcset="">
+          <nav>
+            <ul>
+              <li class="textspace"><a>Hola1</a></li>
+              <li class="textspace">|</li>
+              <li class="textspace"><a>Hola2</a></li>
+              <li class="textspace">|</li>
+              <li class="textspace"><a>Hola3</a></li>
+              <li class="textspace">|</li>
+              <li class="textspace"><a>Hola4</a></li>
+            </ul>
+          </nav>
         </div>
+      </div>
     </head>
     <link rel="stylesheet" href="css/slider.css">
     <div class="slider">
-        <ul>
-            <li><img
-                    src="https://icdn6.digitaltrends.com/image/digitaltrends_es/available-on-the-grand-sport-3lt-trim-the-carbon-65-edition-celebrates-65-years-of-corvette-with-a-new-ceramic-matrix-gray-paint-color-and-visible-carbon-fiber-exterior-elements-including-a-carbon-f-1208x800.jpg">
-            </li>
-            <li><img src="https://www.diariomotor.com/imagenes/picscache/1920x1600c/tesla-model-s-p100d_1920x1600c.jpg">
-            </li>
-            <li><img src="https://st1.uvnimg.com/e4/d8/667bc93b41cfb637c3343d9f16e7/roadster-front-34.jpg"></li>
-        </ul>
+      <ul>
+        <li><img src="https://cdn.vox-cdn.com/thumbor/E7HsNNmkOHGmEmWbePbrLB_JNG0=/0x0:3840x2160/1200x675/filters:focal(1613x773:2227x1387)/cdn.vox-cdn.com/uploads/chorus_image/image/57642479/Roadster_Hero.0.jpg"></li>
+        <li><img src="https://www.diariomotor.com/imagenes/picscache/1920x1600c/tesla-model-s-p100d_1920x1600c.jpg"></li>
+        <li><img src="https://www.tesla.com/tesla_theme/assets/img/models/v1.0/section-hero-background.jpg?20180111"></li>
+      </ul>
     </div>
     <div class="grid-container">
-        <div class="grid-item">
-            <h1 class="title1">Carro 1</h1>
-        </div>
-        <div class="grid-item">
-            <h1 class="title2">Carro 2</h1>
-        </div>
+      <div class="grid-item">
+        <h1>Carro 1</h1>
+      </div>
+      <div class="grid-item">
+        <h1>Carro 2</h1>
+      </div>
     </div>
     <div class="botones">
-        <div><b class="boton1">Ver más</b></div>
-        <div><b class="boton2">Ver más</b></div>
+      <div><b class="boton1">Ver más</b></div>
     </div>
     <link rel="stylesheet" href="css/parrafos.css">
     <div id="parrafos">
-        <div class="parrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem tellus. Donec
-            dolor est, ornare quis urna quis, venenatis interdum risus. Etiam in augue sed sapien fringilla varius ac
-            posuere augue. Praesent quis faucibus libero. Pellentesque fermentum diam vitae nunc porttitor, eget
-            scelerisque metus commodo. Aliquam pretium tincidunt est id pulvinar. In urna magna, tincidunt non viverra
-            quis, accumsan vitae leo. Donec quis eleifend tortor. Fusce tincidunt eleifend accumsan. Morbi neque nisl,
-            sodales sed turpis posuere, consectetur aliquet quam. Nunc quis enim pellentesque, tempus ligula vitae,
-            efficitur est. Vestibulum et sem dapibus, tincidunt dui ac, molestie est. In at ipsum ac augue fermentum
-            hendrerit. Sed nibh quam, tempor facilisis justo vitae, auctor maximus justo. Fusce hendrerit risus a lacus
-            viverra luctus.</div>
-        <div class="parrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem tellus. Donec
-            dolor est, ornare quis urna quis, venenatis interdum risus. Etiam in augue sed sapien fringilla varius ac
-            posuere augue. Praesent quis faucibus libero. Pellentesque fermentum diam vitae nunc porttitor, eget
-            scelerisque metus commodo. Aliquam pretium tincidunt est id pulvinar. In urna magna, tincidunt non viverra
-            quis, accumsan vitae leo. Donec quis eleifend tortor. Fusce tincidunt eleifend accumsan. Morbi neque nisl,
-            sodales sed turpis posuere, consectetur aliquet quam. Nunc quis enim pellentesque, tempus ligula vitae,
-            efficitur est. Vestibulum et sem dapibus, tincidunt dui ac, molestie est. In at ipsum ac augue fermentum
-            hendrerit. Sed nibh quam, tempor facilisis justo vitae, auctor maximus justo. Fusce hendrerit risus a lacus
-            viverra luctus.</div>
+      <div class="parrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem tellus. Donec dolor est, ornare quis urna quis, venenatis interdum risus. Etiam in augue sed sapien fringilla varius ac posuere augue. Praesent quis faucibus libero. Pellentesque fermentum diam vitae nunc porttitor, eget scelerisque metus commodo. Aliquam pretium tincidunt est id pulvinar. In urna magna, tincidunt non viverra quis, accumsan vitae leo. Donec quis eleifend tortor. Fusce tincidunt eleifend accumsan. Morbi neque nisl, sodales sed turpis posuere, consectetur aliquet quam. Nunc quis enim pellentesque, tempus ligula vitae, efficitur est. Vestibulum et sem dapibus, tincidunt dui ac, molestie est. In at ipsum ac augue fermentum hendrerit. Sed nibh quam, tempor facilisis justo vitae, auctor maximus justo. Fusce hendrerit risus a lacus viverra luctus.</div>
+      <div class="parrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem tellus. Donec dolor est, ornare quis urna quis, venenatis interdum risus. Etiam in augue sed sapien fringilla varius ac posuere augue. Praesent quis faucibus libero. Pellentesque fermentum diam vitae nunc porttitor, eget scelerisque metus commodo. Aliquam pretium tincidunt est id pulvinar. In urna magna, tincidunt non viverra quis, accumsan vitae leo. Donec quis eleifend tortor. Fusce tincidunt eleifend accumsan. Morbi neque nisl, sodales sed turpis posuere, consectetur aliquet quam. Nunc quis enim pellentesque, tempus ligula vitae, efficitur est. Vestibulum et sem dapibus, tincidunt dui ac, molestie est. In at ipsum ac augue fermentum hendrerit. Sed nibh quam, tempor facilisis justo vitae, auctor maximus justo. Fusce hendrerit risus a lacus viverra luctus.</div>
     </div>
-</body>
-
+  </body>
 </html>
